integrated learning path api to frontend, unstyled